Fixed start and end fields spacing (event forms) to only effect first field.

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -312,7 +312,7 @@ hr {
   display: none;
 }
 
-.form-group > .col-sm-6 {
+.form-group > .col-sm-6:first {
   @media (max-width: $screen-sm-max) {
     margin-bottom: 15px;
   }
